fixed bem naming for header. created arrow using css in request demo button. fixed alignment of header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,130 +30,84 @@ ul {
 }
 
 .header {
-  position: absolute;
+  position: fixed;
   width: 1120px;
   height: 60px;
   left: 100px;
   top: 47px;
 }
 
-.nav {
+.header__wrapper {
   display: flex;
   align-items: center;
 }
 
 .logo {
   margin-right: var(--mb-20);
+  width: 49px;
+  height: 35px;
+  left: 240px;
+  top: 59px;
 }
 
-.nav-menu {
-  margin-left: 70px;
+.nav {
+  display: flex;
+  align-items: center;
+  padding-left: 121px;
 }
-.nav-menu__item {
-  display: inline;
+.nav__item {
+  color: var(--paragraph-color);
   font-size: var(--h4-font-size);
-  margin-left: var(--mb-20);
-  margin-right: var(--mb-20);
+  padding-left: var(--mb-20);
+  padding-right: var(--mb-20);
+  margin: 0;
   cursor: pointer;
 }
-.nav-menu__button {
+.nav__item--active {
+  color: var(--title-color);
+  font-weight: var(--font-bold);
+}
+
+.demo {
+  display: flex;
+  align-items: center;
+}
+.demo__button {
   position: absolute;
-  width: 180px;
-  height: 50px;
-  left: 800px;
-  top: 3px;
+  width: 210px;
+  height: 60px;
+  left: 1030px;
+  font-size: var(--h4-font-size);
   background: var(--body-color);
+  color: var(--title-color);
   box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1);
   border-radius: 50px;
   border-color: transparent;
-  margin-left: 140px;
 }
-
-.arrow {
+.demo__arrow {
+  width: 20px;
   display: inline-block;
   margin-left: var(--mb-10);
+  vertical-align: 2px;
+}
+.demo__right-line {
+  width: 20px;
+  border: solid #9C69E2;
+  border-width: 0 2px 2px 0;
+  height: 0px;
+  float: left;
+  margin-top: 10px;
+}
+.demo__right-point {
+  transform: rotate(-45deg);
+  border: solid #9C69E2;
+  border-width: 0 2px 2px 0;
+  padding: 3px;
+  float: right;
+  margin-top: -5px;
 }
 
-.about__container {
-  position: absolute;
-  width: 645px;
-  height: 464px;
-  left: 100px;
-  top: 237px;
-}
-.about__title {
-  width: 645px;
-  height: 184px;
-  left: 240px;
-  top: 237px;
-  line-height: 110%;
-  font-size: var(--h1-font-size);
-  margin-bottom: var(--mb-10);
-}
-.about__description {
-  width: 380px;
-  height: 120px;
-  left: 240px;
-  top: 471px;
-  line-height: 160%;
-  color: var(--paragraph-color);
-  font-size: var(--paragraph-font-size);
-  font-weight: var(--font-light);
-  margin-bottom: var(--mb-20);
-}
 
-.about-img {
-  position: absolute;
-  width: 850px;
-  height: 468px;
-  left: 503px;
-  top: 333px;
-}
-
-.about-btn {
-  position: absolute;
-  width: 170px;
-  height: 60px;
-  color: white;
-  background-color: var(--primary-color);
-  border-radius: 50px;
-  border-color: transparent;
-}
-
-.about-details__container {
-  background-color: var(--secondary-color-lighten);
-  position: absolute;
-  width: 1200px;
-  height: 520px;
-  left: 100px;
-  top: 903.18px;
-  border-radius: 50px;
-}
-.about-details__img {
-  position: absolute;
-  width: 477px;
-  height: 504px;
-}
-.about-details__title {
-  position: absolute;
-  width: 475px;
-  height: 100px;
-  left: 600px;
-  top: 120px;
-  font-family: var(--title-font);
-  font-weight: var(--font-bold);
-  font-size: var(--h2-font-size);
-}
-.about-details__paragraph {
-  position: absolute;
-  width: 474px;
-  height: 170px;
-  left: 600px;
-  top: 250px;
-  font-family: var(--paragraph-font);
-  font-weight: var(--font-semibold);
-  font-size: var(--paragraph-font-size);
-}
 
 :root {
   --header-height: 3.75rem;
