--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-    position: absolute;
+    position: fixed;
     width: 1120px;
     height: 60px;
     left: 100px;
@@ -7,64 +7,91 @@
     
 }
 
-.nav {
+.header__wrapper {
     display: flex;
     align-items: center;
-    
-    
 }
+
+
 
 .logo {
     margin-right: var(--mb-20);
+    width: 49px;
+    height: 35px;
+    left: 240px;
+    top: 59px;
 }
 
-.nav-menu {
+.nav {
   
-    margin-left: 70px;
+    display: flex;
+    align-items: center;
+    padding-left: 121px;
 
     &__item {
-        display: inline;
+        color: var(--paragraph-color);
         font-size: var(--h4-font-size);
-        margin-left: var(--mb-20);
-        margin-right: var(--mb-20);
+        padding-left: var(--mb-20);
+        padding-right: var(--mb-20);
+        margin: 0;
         cursor: pointer;
+        
 
+        &--active {
+            color: var(--title-color);
+            font-weight: var(--font-bold);
+        }
     }
+}
 
-   &__button {
+
+.demo {
+    display: flex;
+    align-items: center;
+
+    &__button {
        position: absolute;
-       width: 180px;
-       height: 50px;
-       left: 800px;
-       top: 3px;
+       width: 210px;
+       height: 60px;
+       left: 1030px;
+       font-size: var(--h4-font-size);
        background: var(--body-color);
+       color: var(--title-color);
        box-shadow: 0px 5px 5px
             rgba(75, 93, 104, 0.1);
        border-radius: 50px;
        border-color: transparent;
-       margin-left: 140px;
-       
-    
-   }
+    }
+
+    &__arrow {
+        width: 20px;
+        display: inline-block;
+        margin-left: var(--mb-10);
+        vertical-align: 2px;
+    }
+
+     &__right-line {
+        width: 20px;
+        border: solid #9C69E2;
+        border-width: 0 2px 2px 0;
+        height: 0px;
+        float: left;
+        margin-top: 10px;
+     }
+
+    &__right-point {
+        transform: rotate(-45deg);
+        border: solid #9C69E2;
+        border-width: 0 2px 2px 0;
+        padding: 3px;
+        float: right;
+        margin-top: -5px;
+    }
+
 
 }
 
-.arrow {
-    display: inline-block;
-    margin-left: var(--mb-10);
-    
-}
 
 
 
-// .active-link {
-//     position: relative;
-
-//     &::before {
-//         content: '';
-//         position: absolute;
-//         background-color: var(--title-color);
-//         border-radius: 50%;
-//     }
-// }
 
